@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Class-DBI-ClassGenerator
-version:             1.01
+version:             1.02
 abstract:            ~
 license:             ~
 author:              ~
