@@ -1,3 +1,7 @@
+2009-02-10   DCANTRELL   1.02  Fix another bug in tests which showed up on
+                                 BSDish platforms but look more like a
+                                 SQLite driver version thing
+
 2008-09-03   DCANTRELL   1.01  Fix bug in tests on BSDish platforms
                                Now depend specifically on File::Temp 0.19
                                  or higher
